@@ -50,8 +50,8 @@ class Chunk_cache : public Game_singletons
 	{
 	Map_chunk *obj_list;
 	unsigned char setup_done;	// Already setup.
-	unsigned short blocked[256];	// For each tile, a bit for each lift
-					//   level if it's blocked by an obj.
+	unsigned long blocked[256];	// For each tile, 2 bits for each lift
+					//   level for #objs blocking there.
 	Egg_vector egg_objects;		// ->eggs which influence this chunk.
 	unsigned short eggs[256];	// Bit #i (0-14) set means that the
 					//   tile is within egg_object[i]'s
@@ -65,7 +65,7 @@ class Chunk_cache : public Game_singletons
 		{ return egg_objects.size(); }
 					// Set/unset blocked region.
 	void set_blocked(int startx, int starty, int endx, int endy,
-						int lift, int ztiles, bool set);
+					int lift, int ztiles, bool set);
 					// Add/remove object.
 	void update_object(Map_chunk *chunk,
 						Game_object *obj, bool add);
@@ -75,11 +75,15 @@ class Chunk_cache : public Game_singletons
 	void update_egg(Map_chunk *chunk, Egg_object *egg, bool add);
 					// Set up with chunk's data.
 	void setup(Map_chunk *chunk);
+#if 0	/* OLD WAY.  Goes away. */
 					// Set blocked tile's bits.
 	void set_blocked_tile(int tx, int ty, int lift, int ztiles)
 		{
-		blocked[ty*c_tiles_per_chunk + tx] |= 
-						(((1 << ztiles) - 1) << lift);
+		unsigned short val = (((1 << ztiles) - 1) << lift);
+		unsigned short inter = blocked[ty*c_tiles_per_chunk + tx]&val;
+		if (inter)
+			intersects(tx, ty, inter);
+		blocked[ty*c_tiles_per_chunk + tx] |= val;
 		}
 					// Clear blocked tile's bits.
 	void clear_blocked_tile(int tx, int ty, int lift, int ztiles)
@@ -87,11 +91,12 @@ class Chunk_cache : public Game_singletons
 		blocked[ty*c_tiles_per_chunk + tx] &= 
 					~(((1 << ztiles) - 1) << lift);
 		}
+#endif
 					// Get highest lift blocked below a
 					//   given level for a desired tile.
-	int get_highest_blocked(int lift, unsigned short tflags);
+	int get_highest_blocked(int lift, unsigned long tflags);
 	int get_highest_blocked(int lift, int tx, int ty);
-	int get_lowest_blocked(int lift, unsigned short tflags);
+	int get_lowest_blocked(int lift, unsigned long tflags);
 	int get_lowest_blocked(int lift, int tx, int ty);
 					// Is a spot occupied?
 	int is_blocked(int height, int lift, int tx, int ty, int& new_lift,
@@ -115,7 +120,7 @@ public:
 					// Quick is blocked
 	inline int is_blocked_fast(int tx, int ty, int lift)
 		{
-		return blocked[ty*c_tiles_per_chunk + tx] & (1 << lift);
+		return blocked[ty*c_tiles_per_chunk + tx] & (3 << (2*lift));
 		}
 	};
 
